--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,6 @@
       <link rel="stylesheet" type="text/css" href="tekcalculator.css">
 
 
-
 </head>
 <body>
 
@@ -70,7 +69,7 @@
 
             <input type="button" value="0" onclick="cal.display.value+='0'">
             <input type="button" value="." onclick="cal.display.value+='.'">
-            <input type="button" value="=" onclick="cal.display.value=math.eval(cal.display.value)">
+            <input type="button" value="=" onclick="cal.display.value=math.evaluate(cal.display.value)">
             <input type="button" value="+" onclick="cal.display.value+='+'">
             <br><br>
             </form>
@@ -85,6 +84,7 @@
  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.js"></script>
   
 
 
